<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discover"
        android:icon="@drawable/ic_discover"
        android:contentDescription="@string/discover"
        android:title="@string/discover" />
    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_notes"
        android:contentDescription="@string/notes"
        android:title="@string/notes" />
    <item
        android:id="@+id/matches"
        android:icon="@drawable/ic_matches"
        android:contentDescription="@string/matches"
        android:title="@string/matches" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:contentDescription="@string/profile"
        android:title="@string/profile" />
</menu>