<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/notes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center_horizontal"
            android:text="@string/personal_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/invite"
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/invite_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    android:id="@+id/invite_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_above="@id/invite_more"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"/>

                <TextView
                    android:id="@+id/invite_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/tap_to_review_50_notes"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/instr_in_you"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textColor="#9B9B9B"
                android:textSize="15sp"
                android:text="Premium members can view all their likes at once"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="113dp"
                android:layout_height="50dp"
                android:text="@string/upgrade"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:insetTop="0dp"
                android:insetLeft="0dp"
                android:insetBottom="0dp"
                android:insetRight="0dp"
                app:cornerRadius="24.5dp"
                android:textColor="@color/black"
                android:backgroundTint="#FCDF03"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/like_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_height="255dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/like_1_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:id="@+id/like_1_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="11dp"
                        android:layout_marginStart="11dp"
                        android:layout_marginBottom="11dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/like_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_height="255dp"
                android:layout_marginStart="5dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/like_2_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:id="@+id/like_2_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="11dp"
                        android:layout_marginStart="11dp"
                        android:layout_marginBottom="11dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>